# solo-leveling-gateway-service/src/main/kotlin/com.sleepkqq.sololeveling/gateway/controller/PlayerController.kt
@@ -6,6 +6,8 @@ import com.sleepkqq.sololeveling.gateway.grpc.client.PlayerGrpcApi
 import com.sleepkqq.sololeveling.gateway.mapper.ProtoMapper
 import com.sleepkqq.sololeveling.gateway.service.auth.AuthService
 import jakarta.validation.Valid
+import jakarta.validation.constraints.Max
+import jakarta.validation.constraints.Min
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
@@ -61,6 +63,19 @@ class PlayerController(
 	override fun completeTask(request: @Valid RestCompleteTaskRequest): ResponseEntity<RestCompleteTaskResponse> {
 		val currentUser = authService.getCurrentUser()
 		val grpcResponse = playerGrpcApi.completeTask(protoMapper.map(currentUser.id, request))
+
+		return ResponseEntity.ok(protoMapper.map(grpcResponse))
+	}
+
+	override fun searchPlayerBalanceTransactions(
+		request: @Valid RestSearchPlayerBalanceTransactionsRequest,
+		page: @Min(0) @Valid Int,
+		pageSize: @Min(1) @Max(100) @Valid Int
+	): ResponseEntity<RestSearchPlayerBalanceTransactionsResponse> {
+
+		val currentUser = authService.getCurrentUser()
+		val grpcRequest = protoMapper.map(currentUser.id, request, page, pageSize)
+		val grpcResponse = playerGrpcApi.searchPlayerBalanceTransactions(grpcRequest)
 
 		return ResponseEntity.ok(protoMapper.map(grpcResponse))
 	}
